# checkers

./: CMakeLists.txt  README.md  checkers_config.h.in  mk_desktop_entry.sh
assets/: checkers.icns
checkers_agents/: CMakeLists.txt
checkers_agents/src/: agent.cpp  agent.h  alphabeta_agent.cpp  alphabeta_agent.h  basic_heuristic.cpp  basic_heuristic.h  early_heuristic.cpp  early_heuristic.h  first_move_agent.cpp  first_move_agent.h  heuristic_agent.cpp  heuristic_agent.h  late_heuristic.cpp  late_heuristic.h  minmax_agent.cpp  minmax_agent.h  random_agent.cpp  random_agent.h  scores.h
checkers_engine/: CMakeLists.txt
checkers_engine/src/: board.cpp  board.h  defines.h  game.cpp  game.h  game_state.cpp  game_state.h  move.h  piece.cpp  piece.h  pos.cpp  pos.h  snapshot.cpp  snapshot.h  utils.cpp  utils.h
google_tests/: CMakeLists.txt
google_tests/src/: checkers_run.cpp  main.cpp  test-agent.cpp  test-agents.cpp  test-board.cpp  test-game.cpp  test-helpers.h  test-heuristics.cpp  test-piece.cpp  test-pos.cpp  test-snapshot.cpp
src/: board_panel.cpp  board_panel.h  checkers.cpp  checkers.xpm  main_frame.cpp  main_frame.h
